--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,13 @@ services:
       - IRIS_API_HOST=iris
     volumes:
       - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
+    networks:
+      - bridge
 
   oncall-mysql:
     hostname: oncall-mysql
     image: mysql:5.7
     environment:
       - MYSQL_ROOT_PASSWORD=1234
+    networks:
+      - bridge
