--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./configs/config.docker.yaml:/configs/config.yaml
       - oncall:/_data
     networks:
-      - default
+      - oncall_default
 
   oncall-mysql:
     hostname: oncall-mysql
@@ -22,7 +22,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=1234
     networks:
-      - default
+      - oncall_default
 volumes:
   oncall:
     external: true
