--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     pull_policy: build
     hostname: oncall
-    links:
+    depends_on:
       - oncall-mysql
     ports:
       - "8080:8080"
