--- a/configs/config.docker.yaml
+++ b/configs/config.docker.yaml
@@ -10,7 +10,7 @@ db:
       scheme: mysql+pymysql
       user: root
       password: '1234'
-      host: oncall-mysql
+      host: oncall-oncall-mysql-1
       port: 3306
       database: oncall
       charset: utf8
