--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
   oncall-mysql:
     hostname: oncall-mysql
     image: mysql:5.7
+    ports:
+      - 3306
     environment:
       - MYSQL_ROOT_PASSWORD=1234
     networks:
