--- a/configs/config.docker.yaml
+++ b/configs/config.docker.yaml
@@ -9,8 +9,8 @@ db:
     kwargs:
       scheme: mysql+pymysql
       user: root
-      password: '1234'
-      host: oncall-oncall-mysql-1
+      password: ')tLFH45^R6^7_09f)k&adsJhY'
+      host: oncall-mysql
       port: 3306
       database: oncall
       charset: utf8
