--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,7 +12,7 @@ db:
       scheme: mysql+pymysql
       user: root
       password: "1234"
-      host: 127.0.0.1
+      host: oncall-mysql
       port: 3306
       database: oncall
       charset: utf8
